# five-words

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  pyproject.toml
src/words/: __main__.py  words.py
tests/: test_words.py
