[tool.poetry]
name = "words"
version = "0.1.0"
description = ""
authors = ["Duncan Booth <duncan.booth@sensynehealth.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.5.1"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
tox = "^3.25.1"
isort = "^5.10.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages=true
ignore_missing_imports=false
disallow_untyped_defs=true

[tool.isort]
profile="black"
known_third_party = []
